<resources>
    <string name="app_name">Just Java</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">Order Summary</string>
    <string name="order">Order</string>
    <string name="email_receipt">Email Receipt</string>
    <string name="thank_you">Thank you!</string>

</resources>
